# rag_finance_system

./: .gitignore  CLAUDE.md  README.md  build_index_bulk.py  conftest.py  docker-compose.yml  download_model.py  pyproject.toml  requirements-dev.txt  requirements.txt  test_performance.py
data/: dictionary_candidates.json  finance_dictionary.json
rag_finance_system/: .env.example  RAG_Finance_API.postman_collection.json  api_app.py  api_schemas.py  app.py  merge_txt_files.py  merged_txt_files.txt  rag金融知识技术路线.md  test_pipeline.py  test_retrieval_baseline.py  关于准确性方案讨论.md
rag_finance_system/src/: __init__.py  bm25_index.py  change.py  dictionary.py  document_processor.py  embedder.py  es_index.py  graph_builder.py  knowledge_graph.py  llm.py  rag_chain.py  retriever.py  rewriter.py  term_index.py  vector_store.py
rag_finance_system/src/fdata/: 中华人民共和国公司法_20131228.docx  中华人民共和国动物防疫法_20150424.docx  中华人民共和国商标法_20130830.docx  中华人民共和国广告法_20150424.docx  (+5 more)
rag_finance_system/tools/: convert_testfiles.py  extract_dictionary.py  generate_questions.py  generate_rewrite_data.py  import_testfiles.py  merge_dictionary.py  rewrite_questions_for_rag.py  train_rewriter.py
tests/: conftest.py
tests/fixtures/: sample_chunks.py  sample_dictionary.json
tests/unit/: test_api_app.py  test_api_schemas.py  test_bm25_index.py  test_dictionary.py  test_document_processor.py  test_embedder.py  test_es_index.py  test_graph_builder.py  test_knowledge_graph.py  test_llm.py  test_rag_chain.py  test_retriever.py  test_rewriter.py  test_term_index.py  test_vector_store.py
(+81 files in other folders)
